le service démarre

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.oli.chauffeeau"
-        minSdk 32
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -29,10 +29,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.7'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+
 }
